create top page

--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
     <title>Document</title>
   </head>
   <body>
-    <header class="header">
+    <header id="header" class="header">
       <a href="" class="header__logo">
         <img src="img/logo2.png" alt="" class="header__logo-img" />
       </a>
       <nav class="header__nav">
         <ul class="header__list">
-          <li class="header__list-item"><a href="" class="header__list-item-txt">Contents</a></li>
-          <li class="header__list-item"><a href="" class="header__list-item-txt">Contents</a></li>
-          <li class="header__list-item"><a href="" class="header__list-item-txt">Contents</a></li>
-          <li class="header__list-item"><a href="" class="header__list-item-txt">Contents</a></li>
-          <li class="header__list-item"><a href="" class="header__list-item-txt">Contents</a></li>
-          <li class="header__list-item"><a href="" class="header__list-item-txt">Contents</a></li>
+          <li class="header__list-item"><a href="" class="header__list-item-txt">About</a></li>
+          <li class="header__list-item"><a href="" class="header__list-item-txt">Case</a></li>
+          <li class="header__list-item"><a href="" class="header__list-item-txt">Menu</a></li>
+          <li class="header__list-item"><a href="" class="header__list-item-txt">Blog</a></li>
+          <li class="header__list-item"><a href="" class="header__list-item-txt">Contact</a></li>
+          <li class="header__list-item"><a href="" class="header__list-item-txt">Access</a></li>
         </ul>
       </nav>
       <ul class="header__sns">
@@ -35,6 +35,19 @@
       </ul>
     </header>
 
+    <!-- sp header -->
+    <div class="sp-header">
+      <a href="" class="sp-logo">
+        <img src="img/logo2.png" alt="" class="sp-logo__img" />
+      </a>
+      <div id="hamburger_button">
+        <span class="hamburger_line" id="line1"></span>
+        <span class="hamburger_line" id="line2"></span>
+        <span class="hamburger_line" id="line3"></span>
+      </div>
+    </div>
+    <!-- end of sp header -->
+
     <main class="main">
       <!-- main visual -->
       <div class="main-mv">
@@ -45,21 +58,17 @@
       <!-- about -->
       <section class="about">
         <div class="about-gallery">
-          <div class="about-gallery__item about-gallery__item1"><img src="img/about1.jpg" alt="" /></div>
-          <div class="about-gallery__item about-gallery__item2"><img src="img/about2.jpg" alt="" /></div>
-          <div class="about-gallery__item about-gallery__item3"><img src="img/about3.jpg" alt="" /></div>
-          <div class="about-gallery__item about-gallery__item4"><img src="img/about4.jpg" alt="" /></div>
-          <div class="about-gallery__item about-gallery__item5"><img src="img/about5.jpg" alt="" /></div>
+          <div class="about-gallery__item about-gallery__item1"><img src="img/about1.png" alt="" /></div>
+          <div class="about-gallery__item about-gallery__item2"><img src="img/about2.png" alt="" /></div>
+          <div class="about-gallery__item about-gallery__item3"><img src="img/about3.png" alt="" /></div>
+          <div class="about-gallery__item about-gallery__item4"><img src="img/about4.png" alt="" /></div>
+          <div class="about-gallery__item about-gallery__item5"><img src="img/about5.png" alt="" /></div>
         </div>
         <div class="about-txt">
           <h2 class="about-txt__ttl">About</h2>
-          <p class="about-txt__p">
-            大航海時代以降、世界中に進出して行ったヨーロッパ人にとって、アジアの日差しは非常に強く感じられるものでした。そんな異国で心地よく過ごすために考え出された建築様式がコロニアルスタイル。真っ白な建物にベランダを廻らし、風通しが良くなるよ
-            うに工夫された住居は、アジアとヨーロッパ人のスタイルが融合した ものといえるでしょう。
-          </p>
-          <p class="about-txt__p">
-            都会に現れる、白い壁に大きなテラスをもった建物、そして屋根には日本瓦…明治41(1908)年に建てられた歴史ある建物です。その中で繰り広げられるフランス料理は、この建物の佇まいと同じく、フランス料理に和のテイストが融合されたもの。
-          </p>
+          <p class="about-txt__p">都会に現れる、白い壁に大きなテラスをもった建物。そして屋根には日本瓦。</p>
+          <p class="about-txt__p">La Baieは明治41(1908)年に建てられた歴史ある建物です。</p>
+          <p class="about-txt__p">その中で繰り広げられるフランス料理は、この建物の佇まいと同じく、フランス料理に和のテイストが融合した特別なものです。</p>
         </div>
       </section>
       <!-- end of about -->
@@ -74,42 +83,152 @@
       <section class="case">
         <div class="case-txt">
           <h2 class="case-txt__ttl">Case</h2>
-          <p class="case-txt__p">
-            フランス、スイスと数々の3つ星レストランで修業を重ねたシェフが繰り広げる料理のコンセプトは、食材の融合。すなわち美味しい食材に国境をつくらないこと。日本とフランスの料理を融合させた独自のコロニアルスタイルです。
-          </p>
-          <p class="case-txt__p">フランスの食材もふんだんに使えば、フレンチではタブーとされる醤油がゼリーになって登場する…100年の時を経て、さらなるフランスと日本の融合をその目で確かめて下さい。</p>
+          <p class="case-txt__p">La Baieは画一的なおもてなしを良しとしません。お客様おひとりおひとりのセンスやライフスタイルに合わせるように、おもてなしをプランいたします。</p>
+          <p class="case-txt__p">毎日来てくださる方も、初めていらした方も、同じようにくつろいで過ごしていただきたい。<br />それが、私たちのスタンスです。</p>
         </div>
         <ul class="case-list">
           <li class="case-list__item">
             <div class="case-list__box">
+              <img src="img/case3.png" alt="" class="case-list__img" />
+              <h3 class="case-list__ttl">Business</h3>
+              <p class="case-list__p">重要なお客様を招いて。</p>
+            </div>
+          </li>
+          <li class="case-list__item">
+            <div class="case-list__box">
               <img src="img/case1.jpg" alt="" class="case-list__img" />
-              <h3 class="case-list__ttl">Case1</h3>
+              <h3 class="case-list__ttl">Celebration</h3>
+              <p class="case-list__p">還暦・入学のお祝いに。</p>
             </div>
-            <a href="" class="case-list__btn">more</a>
           </li>
           <li class="case-list__item">
             <div class="case-list__box">
-              <img src="img/case2.jpg" alt="" class="case-list__img" />
-              <h3 class="case-list__ttl">Case2</h3>
+              <img src="img/case2.png" alt="" class="case-list__img" />
+              <h3 class="case-list__ttl">Wedding</h3>
+              <p class="case-list__p">結婚式や結納の際に。</p>
             </div>
-            <a href="" class="case-list__btn">more</a>
           </li>
           <li class="case-list__item">
             <div class="case-list__box">
-              <img src="img/case3.jpg" alt="" class="case-list__img" />
-              <h3 class="case-list__ttl">Case3</h3>
+              <img src="img/case4.png" alt="" class="case-list__img" />
+              <h3 class="case-list__ttl">Memoria</h3>
+              <p class="case-list__p">様々な記念日に。</p>
             </div>
-            <a href="" class="case-list__btn">more</a>
           </li>
+          <li class="case-list__item">
+            <div class="case-list__box">
+              <img src="img/case1.png" alt="" class="case-list__img" />
+              <h3 class="case-list__ttl">Party</h3>
+              <p class="case-list__p">貸切パーティーなどに。</p>
+            </div>
+          </li>
+          <li class="case-list__item"><a href="" class="case-list__btn btn-1">All case</a></li>
         </ul>
       </section>
       <!-- end of case -->
+
+      <!-- menu -->
+      <section class="menu">
+        <h2 class="menu__ttl ttl-1">Menu</h2>
+        <p class="menu__p">フランス、スイスと数々の3つ星レストランで修業を重ねたシェフが繰り広げる料理のコンセプトは、食材の融合。</p>
+        <p class="menu__p">100年の時を経て、さらなるフランスと日本の融合をその目で確かめて下さい</p>
+        <div class="menu__grid">
+          <a href="" class="menu__imgbox-8"
+            ><img src="img/menu8.png" alt="" />
+            <p class="menu__btn btn-1">View more</p></a
+          >
+          <a href="" class="menu__imgbox-1"><img src="img/menu1.png" alt="" /></a>
+          <a href="" class="menu__imgbox-2"><img src="img/menu2.png" alt="" /></a>
+          <a href="" class="menu__imgbox-3"><img src="img/menu3.png" alt="" /></a>
+          <a href="" class="menu__imgbox-4"><img src="img/menu4.png" alt="" /></a>
+          <a href="" class="menu__imgbox-5"><img src="img/menu5.png" alt="" /></a>
+          <a href="" class="menu__imgbox-6"><img src="img/menu6.png" alt="" /></a>
+          <a href="" class="menu__imgbox-7"><img src="img/menu7.png" alt="" /></a>
+        </div>
+      </section>
+      <!-- end of menu -->
+
+      <!-- blog -->
+      <section class="blog">
+        <div class="blog-txt">
+          <h2 class="blog-txt__ttl">Blog</h2>
+          <p class="blog-txt__p">お役立ち情報やお知らせを配信。</p>
+        </div>
+        <ul class="blog-list">
+          <li class="blog-list__item">
+            <a href="">
+              <div class="blog-list__box">
+                <img src="img/logo2-xl.png" alt="" class="blog-list__img" />
+              </div>
+              <div class="blog-list__txtbox">
+                <time class="blog-list__date">2019/04/13</time>
+                <h3 class="blog-list__ttl">横浜山手より</h3>
+                <p class="blog-list__btn">more</p>
+              </div>
+            </a>
+          </li>
+          <li class="blog-list__item">
+            <a href="">
+              <div class="blog-list__box">
+                <img src="img/logo2-xl.png" alt="" class="blog-list__img" />
+              </div>
+              <div class="blog-list__txtbox">
+                <time class="blog-list__date">2019/04/11</time>
+                <h3 class="blog-list__ttl">ラベシェフ日記。No01</h3>
+                <p class="blog-list__btn">more</p>
+              </div>
+            </a>
+          </li>
+          <li class="blog-list__item">
+            <a href="">
+              <div class="blog-list__box">
+                <img src="img/logo2-xl.png" alt="" class="blog-list__img" />
+              </div>
+              <div class="blog-list__txtbox">
+                <time class="blog-list__date">2019/04/7</time>
+                <h3 class="blog-list__ttl">春のメニュー</h3>
+                <p class="blog-list__btn">more</p>
+              </div>
+            </a>
+          </li>
+        </ul>
+      </section>
+      <!-- end of blog -->
+      <!-- contact -->
+      <section class="contact">
+        <div class="contact__txtbox">
+          <h2 class="contact__ttl ttl-1">Contact</h2>
+          <dl class="contact__list">
+            <dt class="contact__data-ttl">営業時間<br />&nbsp;</dt>
+            <dd class="contact__data">ランチ　（11:30～14:00）<br />ディナー（17:30～21:00）</dd>
+            <dt class="contact__data-ttl">定休日</dt>
+            <dd class="contact__data">月曜日（祝日の場合火曜日）</dd>
+            <dt class="contact__data-ttl">駐車場</dt>
+            <dd class="contact__data">10台</dd>
+            <dt class="contact__data-ttl">電話番号</dt>
+            <dd class="contact__data">078-262-6650</dd>
+          </dl>
+        </div>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3240.4047838747083!2d139.6947481152592!3d35.69165538019188!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188cd6981dce11%3A0xee411b3fa3fc9f13!2zSEFM5p2x5Lqs!5e0!3m2!1sja!2sjp!4v1637117890764!5m2!1sja!2sjp"
+          width="600"
+          height="450"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          class="contact__map"
+        ></iframe>
+      </section>
+      <!-- end of contact -->
     </main>
-    <footer></footer>
+    <footer class="footer">
+      <small class="footer__copy">&copy; 2021 Grande Maison La Baie .</small>
+    </footer>
     <script src="js/rellax.min.js"></script>
     <script>
       // 要素の位置情報を取得
       var rellax = new Rellax(".rellax");
     </script>
+    <script src="js/script.js"></script>
   </body>
 </html>
