途中アップ

--- a/index.html
+++ b/index.html
@@ -48,10 +48,16 @@
     </div>
     <!-- end of sp header -->
 
+    <!-- to top button -->
+    <a href="#" id="to-top" class="to-top">
+      <img src="img/triangle.png" alt="" class="to-top__img" />
+    </a>
+    <!-- end of to top button -->
+
     <main class="main">
       <!-- main visual -->
       <div class="main-mv">
-        <img src="img/logo1.png" alt="" class="main-mv__img" />
+        <h1><img src="img/logo1.png" alt="" class="main-mv__img" /></h1>
       </div>
       <!-- end of main visual -->
 
@@ -111,7 +117,7 @@
           <li class="case-list__item">
             <div class="case-list__box">
               <img src="img/case4.png" alt="" class="case-list__img" />
-              <h3 class="case-list__ttl">Memoria</h3>
+              <h3 class="case-list__ttl">Memorial</h3>
               <p class="case-list__p">様々な記念日に。</p>
             </div>
           </li>
@@ -135,7 +141,7 @@
         <div class="menu__grid">
           <a href="" class="menu__imgbox-8"
             ><img src="img/menu8.png" alt="" />
-            <p class="menu__btn btn-1">View more</p></a
+            <p class="menu__btn btn-1">All menu</p></a
           >
           <a href="" class="menu__imgbox-1"><img src="img/menu1.png" alt="" /></a>
           <a href="" class="menu__imgbox-2"><img src="img/menu2.png" alt="" /></a>
