--- a/index.html
+++ b/index.html
@@ -59,22 +59,22 @@
       <nav class="header__nav">
         <ul class="header__list">
           <li class="header__list-item">
-            <a href="" class="header__list-item-txt">About</a>
+            <a href="#about" class="header__list-item-txt">About</a>
           </li>
           <li class="header__list-item">
-            <a href="" class="header__list-item-txt">Case</a>
+            <a href="#case" class="header__list-item-txt">Case</a>
           </li>
           <li class="header__list-item">
-            <a href="" class="header__list-item-txt">Menu</a>
+            <a href="#menu" class="header__list-item-txt">Menu</a>
           </li>
           <li class="header__list-item">
-            <a href="" class="header__list-item-txt">Blog</a>
+            <a href="#blog" class="header__list-item-txt">Blog</a>
           </li>
           <li class="header__list-item">
-            <a href="" class="header__list-item-txt">Contact</a>
+            <a href="#contact" class="header__list-item-txt">Contact</a>
           </li>
           <li class="header__list-item">
-            <a href="" class="header__list-item-txt">Access</a>
+            <a href="#contact" class="header__list-item-txt">Access</a>
           </li>
         </ul>
       </nav>
@@ -150,7 +150,7 @@
             </div>
           </div>
           <div class="about-txt">
-            <h2 class="about-txt__ttl">About</h2>
+            <h2 id="about" class="about-txt__ttl">About</h2>
             <p class="about-txt__p">
               都会に現れる、白い壁に大きなテラスをもった建物。そして屋根には日本瓦。
             </p>
@@ -178,7 +178,7 @@
         <!-- case -->
         <section class="case">
           <div class="case-txt">
-            <h2 class="case-txt__ttl">Case</h2>
+            <h2 id="case" class="case-txt__ttl">Case</h2>
             <p class="case-txt__p">
               La
               Baieは画一的なおもてなしを良しとしません。お客様おひとりおひとりのセンスやライフスタイルに合わせるように、おもてなしをプランいたします。
@@ -232,7 +232,7 @@
 
         <!-- menu -->
         <section class="menu">
-          <h2 class="menu__ttl ttl-1">Menu</h2>
+          <h2 id="menu" class="menu__ttl ttl-1">Menu</h2>
           <p class="menu__p">
             フランス、スイスと数々の3つ星レストランで修業を重ねたシェフが繰り広げる料理のコンセプトは、食材の融合。
           </p>
@@ -272,7 +272,7 @@
         <!-- blog -->
         <section class="blog">
           <div class="blog-txt">
-            <h2 class="blog-txt__ttl">Blog</h2>
+            <h2 id="blog" class="blog-txt__ttl">Blog</h2>
             <p class="blog-txt__p">お役立ち情報やお知らせを配信。</p>
           </div>
           <ul class="blog-list">
@@ -318,7 +318,7 @@
         <!-- contact -->
         <section class="contact">
           <div class="contact__txtbox">
-            <h2 class="contact__ttl ttl-1">Contact</h2>
+            <h2 id="contact" class="contact__ttl ttl-1">Contact</h2>
             <dl class="contact__list">
               <dt class="contact__data-ttl">営業時間<br />&nbsp;</dt>
               <dd class="contact__data">
